--- a/index.html
+++ b/index.html
@@ -356,8 +356,8 @@
   <script>
     // ================== ГРУППА КОНСТАНТ/НАСТРОЕК ==================
     // //ключи и настройки интеграции Google API (замените на свои)
-    const API_KEY = "PASTE_YOUR_API_KEY_HERE";                       // //ключ API для Google Sheets
-    const CLIENT_ID = "PASTE_YOUR_OAUTH_CLIENT_ID.apps.googleusercontent.com"; // //OAuth Client ID
+    const API_KEY = "AIzaSyDlBMVh0M2KWw7Ky2QRCmyeFwyMRl92dKU";                       // //ключ API для Google Sheets
+    const CLIENT_ID = "559428676581-lu7uroo525nlc2k7gs0ekjbok9aj7qi0.apps.googleusercontent.com"; // //OAuth Client ID
     const SCOPES = "https://www.googleapis.com/auth/spreadsheets";   // //область доступа
     const DISCOVERY_DOC = "https://sheets.googleapis.com/$discovery/rest?version=v4"; // //документация
 
