--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="manifest" href="/manifest.json">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="Costs App">
+  <meta name="mobile-web-app-capable" content="yes">
   <link rel="apple-touch-icon" href="/icons/icon-192.png">
   <title>Финансовый журнал: Расходы/Доходы</title>
   <style>
@@ -519,6 +521,19 @@
     navigator.serviceWorker.register('/service-worker.js');
   });
 }
+
+    // Если приложение открыто в Safari, покажем подсказку «Добавить на экран Домой»
+  if (!window.navigator.standalone) {
+    const hint = document.createElement('div');
+    hint.textContent = 'Добавьте приложение на экран «Домой» через меню Safari, чтобы открыть его во весь экран.';
+    Object.assign(hint.style, {
+      position: 'fixed', bottom: '20px', left: '50%', transform: 'translateX(-50%)',
+      background: 'rgba(0,0,0,0.7)', color: '#fff', padding: '10px 14px',
+      borderRadius: '8px', fontSize: '14px', zIndex: '10000'
+    });
+    document.body.appendChild(hint);
+    setTimeout(() => hint.remove(), 6000);
+  }
   </script>
 </body>
 </html>
