--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     }
 
     /* ===== Базовый фон ===== */
-    html, body { height:100%; overflow-y: hidden; }
+    html, body { height:100%;  width:100%; overflow: hidden; }
     body{
       margin:0;
       font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Inter, "Helvetica Neue", Arial;
@@ -76,7 +76,7 @@
     .pin-hint{ margin-top: 10px; color: var(--muted); font-size: 12px; }
 
     /* ===== Каркас приложения ===== */
-    .app-wrap{ display:flex; align-items:center; justify-content:center; min-height: 100dvh; }
+    .app-wrap{ display:flex; align-items:center; justify-content:center; height:100%;  width:100%;  }
     .app-card{
       width: var(--container-w); background: var(--card); border: 1px solid var(--border);
       border-radius: var(--radius); box-shadow: var(--shadow); overflow: hidden; position: relative;
