--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
     /* ===== Каркас приложения ===== */
     .app-wrap{ display:flex; align-items:center; justify-content:center; height:100%;  width:100%;  }
     .app-card{
-      width: var(--container-w); background: var(--card); border: 1px solid var(--border);
+      background: var(--card); border: 1px solid var(--border);
       border-radius: var(--radius); box-shadow: var(--shadow); overflow: hidden; position: relative;
+      height:100%;  width:100%; 
     }
     .app-header{
       display:flex; justify-content:space-between; align-items:center;
