--- a/index.html
+++ b/index.html
@@ -76,11 +76,22 @@
     .pin-hint{ margin-top: 10px; color: var(--muted); font-size: 12px; }
 
     /* ===== Каркас приложения ===== */
-    .app-wrap{ display:flex; align-items:center; justify-content:center; height:100%;  width:100%;  }
+    .app-wrap{
+      height:100vh;
+      width:100vw;
+      margin:0;
+    }
+
     .app-card{
-      background: var(--card); border: 1px solid var(--border);
-      border-radius: var(--radius); box-shadow: var(--shadow); overflow: hidden; position: relative;
-      height:100%;  width:100%; 
+      background: var(--card);
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      overflow: hidden;
+      position: fixed;
+      inset: 0;
+      margin:0;
+      padding:16px; /* сохраняем внутренние отступы */
     }
     .app-header{
       display:flex; justify-content:space-between; align-items:center;
