--- a/index.html
+++ b/index.html
@@ -83,10 +83,6 @@
     }
 
     .app-card{
-      background: var(--card);
-      border: 1px solid var(--border);
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
       overflow: hidden;
       position: fixed;
       inset: 0;
@@ -159,6 +155,22 @@
       .col-date{ grid-column: 1 / span 2; }
       .col-amount{ grid-column: 3 / span 2; }
     }
+
+    #modal9-container .glass3d {
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid var(--content-color);
+      backdrop-filter: blur(3px); 
+      -webkit-backdrop-filter: blur(3px); 
+      box-shadow:  
+    0 0 0.75px hsl(205 20% 10% / 0.2), 
+    0.7px 0.8px 1.2px -0.4px hsl(205 20% 10% / 0.1), 
+    1.3px 1.5px 2.2px -0.8px hsl(205 20% 10% / 0.1), 
+    2.3px 2.6px 3.9px -1.2px hsl(205 20% 10% / 0.1), 
+    3.9px 4.4px 6.6px -1.7px hsl(205 20% 10% / 0.1), 
+    6.5px 7.2px 10.9px -2.1px hsl(205 20% 10% / 0.1), 
+    8px 9px 14px -2.5px hsl(205 20% 10% / 0.2);
+    }
+    
   </style>
 </head>
 <body>
