--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     }
 
     /* ===== Табы и свайп ===== */
-    .tabs{ display:flex; gap:8px; padding: 12px 12px 2px 12px; border-bottom: 1px solid var(--border); background: rgba(255,255,255,0.02); }
+    .tabs{ display:flex; gap:8px; padding: 12px 12px 2px 12px; }
     .tab{ padding: 10px 14px; border: 1px solid var(--border); border-bottom: none; border-radius: 12px 12px 0 0; background: rgba(255,255,255,0.03); color: var(--muted); font-weight: 600; cursor: pointer; }
     .tab.active{ color: var(--text); background: rgba(255,255,255,0.08); }
     .swipe-hint{ text-align:center; font-size: 12px; color: var(--muted); padding: 6px 0 10px 0; }
