--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <meta name="mobile-web-app-capable" content="yes">
   <link rel="apple-touch-icon" href="/icons/icon-192.png">
   <title>Финансовый журнал: Расходы/Доходы</title>
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
   <style>
     /* ===== :root — палитра и размеры (можно легко менять под пользователей) ===== */
     :root{
@@ -36,7 +38,7 @@
     html, body { height:100%;  width:100%; overflow: hidden; }
     body{
       margin:0;
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Inter, "Helvetica Neue", Arial;
+      font-family: 'Comfortaa', sans-serif;
       color: var(--text);
       background: #0b0f14;
       background-image: var(--bg-image-url);
