--- a/index.html
+++ b/index.html
@@ -512,6 +512,7 @@
     // ================== ПРИВЯЗКА СОБЫТИЙ ==================
     window.addEventListener('DOMContentLoaded', ()=>{
     // //PIN
+      initPinPad();
 
       // //табы
       document.getElementById('tab-exp').addEventListener('click', ()=> setPage('exp'));
